--- a/src/sass/imports/_fonts.scss
+++ b/src/sass/imports/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100;1,700&display=swap');
 
 body {
     font-family: $font_family_secondary;
